day03/fakeapi/fakeapi-ing.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: fakeapi-ing 
  namespace: myns 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  ingressClassName: nginx 
  rules:
  - host: api-188.166.206.98.nip.io 
    http: 
      paths:
      - path: /v1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: v1-fakeapi-svc 
            port:
              number: 3000
      - path: /v2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: v2-fakeapi-svc 
            port:
              number: 3000
